--- a/Mini_Project_Naive_Bayes.ipynb
+++ b/Mini_Project_Naive_Bayes.ipynb
@@ -968,8 +968,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on training data: 0.923246\n",
-      "Accuracy on test data:     0.772756\n"
+      "Accuracy on training data: 0.919390\n",
+      "Accuracy on test data:     0.766545\n"
      ]
     }
    ],
@@ -1000,8 +1000,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1133  655]\n",
-      " [ 406 2475]]\n"
+      "[[1156  690]\n",
+      " [ 400 2423]]\n"
      ]
     }
    ],
@@ -1050,26 +1050,26 @@
      "text": [
       "Good words\t     P(fresh | word)\n",
       "             delight 0.97\n",
-      "              finest 0.97\n",
-      "            touching 0.96\n",
-      "              wilder 0.96\n",
-      "        irresistible 0.95\n",
-      "             rousing 0.95\n",
+      "              superb 0.97\n",
+      "           energetic 0.96\n",
+      "            captures 0.96\n",
+      "         masterpiece 0.95\n",
       "           childhood 0.95\n",
+      "             rousing 0.95\n",
+      "              wilder 0.95\n",
+      "              tender 0.95\n",
       "            intimate 0.95\n",
-      "          remarkable 0.95\n",
-      "            captures 0.94\n",
       "Bad words\t     P(fresh | word)\n",
-      "        unsatisfying 0.09\n",
-      "             trailer 0.09\n",
-      "         forgettable 0.08\n",
-      "             witless 0.08\n",
+      "                 ten 0.09\n",
+      "              dreary 0.08\n",
+      "            instinct 0.08\n",
+      "               inept 0.07\n",
       "               bland 0.07\n",
-      "       unfortunately 0.05\n",
-      "             unfunny 0.05\n",
-      "          uninspired 0.05\n",
-      "                lame 0.05\n",
-      "           pointless 0.04\n"
+      "            tiresome 0.06\n",
+      "          uninspired 0.06\n",
+      "                save 0.06\n",
+      "           pointless 0.05\n",
+      "                lame 0.04\n"
      ]
     }
    ],
@@ -1146,25 +1146,25 @@
       "---------------------------\n",
       "Herzog offers some evidence of Kinski's great human warmth, somewhat more of his rage of unimaginable proportions, and a good demonstration of Kinski's uncanny capacity to corkscrew his way into the frame.\n",
       "\n",
-      "If it's to be experienced at all, Return to Paradise is best seen as a lively piece of pulp, not a profound exploration of the vagaries of the human soul.\n",
+      "Working from an Elmore Leonard novel, Tarantino has created a gangster fiction that is never larger than life and sometimes smaller.\n",
       "\n",
-      "The plot of The Glimmer Man involves not only the Family Man but Our Evil Secret Government, the Russian Mafia and Rich Powerful Politicians -- the three stooges of action cinema in the '90s.\n",
+      "Director Ron Howard brings a quality of gentleness and whimsy to the performances, but basically this is a highly calculated project brought in by those two old pros, producers Richard Zanuck and David Brown.\n",
       "\n",
-      "While Leone's vision still has a magnificent sweep, the film finally subsides to an emotional core that is sombre, even elegiac, and which centres on a man who is bent and broken by time, and finally left with nothing but an impotent sadness.\n",
+      "A complicated film that never really successfully yokes together the themes of money-making and sexuality, it reveals both Kazan's operatic sensibility and his inability to follow an argument rigorously through.\n",
       "\n",
-      "A bleak, annoyingly quirky Gen-X recasting of the When Harry Met Sally notion that true love is based on friendship.\n",
+      "What if this lesser-known chapter of German resistance had been more deeply captured? What if the moral conflicts running through this movie about love of country and revolt said more about Germany, war and, yes, genocide?\n",
       "\n",
       "Mis-predicted Fresh quotes\n",
       "--------------------------\n",
-      "A must-see among genre fans, especially guys in their teens and 20s, for whom the script's pretentious mumbo-jumbo of undergraduate mythology, religious mysticism and technobabble could even be a plus rather than a dramatic liability.\n",
-      "\n",
-      "I saw this at a festival and hated it, then sat through it again a year later and decided it wasn't so bad, aside from the god-awful ending.\n",
+      "Although pic's basic premise is repellent -- recently dead bodies are resurrected and begin killing human beings in order to eat their flesh -- it is in execution that the film distastefully excels.\n",
       "\n",
       "Some of the gags don't work, but fewer than in any previous Brooks film that I've seen, and when the jokes are meant to be bad, they are riotously poor. What more can one ask of Mel Brooks?\n",
       "\n",
-      "Nathan Lane, Matthew Broderick and Gary Beach have their singing, dancing and kvetching in the Broadway smash The Producers immortalized on film.\n",
+      "It's not remotely plausible, but with Willis' McClane leaping onto the tailfins of passing jet fighters and bringing down helicopters by launching police cars at them, there's enough stuff blowing up that action fans won't mind much.\n",
       "\n",
-      "It isn't without some zip, though you have to wonder why the producers bothered when the censors demanded that the dancers be shown only from the neck up.\n",
+      "A gooey, swooning swatch of romantic hyperventilation, its queasy charms. And let it be said that surrendering to those charms could be as guilt-inducing as polishing off a pint of Haagen-Dazs chocolate ice cream before lunch.\n",
+      "\n",
+      "There are occasional flashes that the film may be patronizing the lower end of the blue-collar mentality, as much if not more than the characters who keep putting Rocky down on the screen. However, Avildsen is noted for creating such ambiguities.\n",
       "\n"
      ]
     }
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1321,7 @@
     "X=tfidfvectorizer.fit_transform(critics.quote)\n",
     "y=critics.fresh=='fresh'\n",
     "\n",
-    "Xtr,Xtest,ytr,ytest=train_test_split(X,Y,test_size=0.3,random_state=42)\n",
+    "Xtr,Xtest,ytr,ytest=train_test_split(X,y,test_size=0.3,random_state=42)\n",
     "\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1358,6 +1358,42 @@
     }
    ],
    "source": [
+    "print(score_NB)\n",
+    "print(score_RF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7778967659027629\n",
+      "0.6862283144142215\n"
+     ]
+    }
+   ],
+   "source": [
+    "#we try 2-grams:\n",
+    "\n",
+    "vectorizer=CountVectorizer(ngram_range=(1,2))\n",
+    "X=vectorizer.fit_transform(critics.quote)\n",
+    "y=critics.fresh=='fresh'\n",
+    "\n",
+    "Xtr,Xtest,ytr,ytest=train_test_split(X,y,test_size=0.3,random_state=42)\n",
+    "\n",
+    "NB=MultinomialNB(alpha=1)\n",
+    "RF=RandomForestClassifier(n_estimators=50)\n",
+    "\n",
+    "NB.fit(Xtr,ytr)\n",
+    "score_NB=NB.score(Xtest,ytest)\n",
+    "\n",
+    "RF.fit(Xtr,ytr)\n",
+    "score_RF=RF.score(Xtest,ytest)\n",
+    "\n",
     "print(score_NB)\n",
     "print(score_RF)"
    ]
