--- a/Mini_Project_Naive_Bayes.ipynb
+++ b/Mini_Project_Naive_Bayes.ipynb
@@ -968,8 +968,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on training data: 0.919390\n",
-      "Accuracy on test data:     0.766545\n"
+      "Accuracy on training data: 0.923246\n",
+      "Accuracy on test data:     0.770829\n"
      ]
     }
    ],
@@ -1000,8 +1000,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1156  690]\n",
-      " [ 400 2423]]\n"
+      "[[1148  711]\n",
+      " [ 359 2451]]\n"
      ]
     }
    ],
@@ -1049,26 +1049,26 @@
      "output_type": "stream",
      "text": [
       "Good words\t     P(fresh | word)\n",
+      "          remarkable 0.97\n",
       "             delight 0.97\n",
-      "              superb 0.97\n",
-      "           energetic 0.96\n",
+      "            hypnotic 0.96\n",
       "            captures 0.96\n",
-      "         masterpiece 0.95\n",
-      "           childhood 0.95\n",
-      "             rousing 0.95\n",
-      "              wilder 0.95\n",
-      "              tender 0.95\n",
-      "            intimate 0.95\n",
+      "            intimate 0.96\n",
+      "            touching 0.96\n",
+      "              richly 0.95\n",
+      "              deftly 0.95\n",
+      "                myth 0.95\n",
+      "               leone 0.95\n",
       "Bad words\t     P(fresh | word)\n",
-      "                 ten 0.09\n",
-      "              dreary 0.08\n",
-      "            instinct 0.08\n",
-      "               inept 0.07\n",
-      "               bland 0.07\n",
-      "            tiresome 0.06\n",
-      "          uninspired 0.06\n",
-      "                save 0.06\n",
+      "       unfortunately 0.10\n",
+      "           stretches 0.10\n",
+      "       disappointing 0.09\n",
+      "           ludicrous 0.09\n",
+      "        unconvincing 0.08\n",
+      "        unsatisfying 0.07\n",
+      "             unfunny 0.05\n",
       "           pointless 0.05\n",
+      "          uninspired 0.05\n",
       "                lame 0.04\n"
      ]
     }
@@ -1144,27 +1144,27 @@
      "text": [
       "Mis-predicted Rotten quotes\n",
       "---------------------------\n",
-      "Herzog offers some evidence of Kinski's great human warmth, somewhat more of his rage of unimaginable proportions, and a good demonstration of Kinski's uncanny capacity to corkscrew his way into the frame.\n",
+      "Anne Frank Remembered tells the audience very little about Anne, but the film speaks volumes concerning the problematic aspects of Holocaust representation.\n",
       "\n",
-      "Working from an Elmore Leonard novel, Tarantino has created a gangster fiction that is never larger than life and sometimes smaller.\n",
+      "A lightweight romance for the senior crowd, Last Chance Harvey does nothing in particular, but it does it fairly well thanks to stars Dustin Hoffman and Emma Thompson.\n",
       "\n",
-      "Director Ron Howard brings a quality of gentleness and whimsy to the performances, but basically this is a highly calculated project brought in by those two old pros, producers Richard Zanuck and David Brown.\n",
+      "Highly stylized fashion-wise but awkwardly unfocused in its plotlines, it aims for the western iconography of Sam Peckinpah and Sergio Leone but never gets past its own directorial hurdles.\n",
       "\n",
-      "A complicated film that never really successfully yokes together the themes of money-making and sexuality, it reveals both Kazan's operatic sensibility and his inability to follow an argument rigorously through.\n",
+      "If it's to be experienced at all, Return to Paradise is best seen as a lively piece of pulp, not a profound exploration of the vagaries of the human soul.\n",
       "\n",
-      "What if this lesser-known chapter of German resistance had been more deeply captured? What if the moral conflicts running through this movie about love of country and revolt said more about Germany, war and, yes, genocide?\n",
+      "What emerges in the end is a strange ambiguity of attitude to the American political system and a hollow humour about cultural values. The cinema of cynicism, really.\n",
       "\n",
       "Mis-predicted Fresh quotes\n",
       "--------------------------\n",
-      "Although pic's basic premise is repellent -- recently dead bodies are resurrected and begin killing human beings in order to eat their flesh -- it is in execution that the film distastefully excels.\n",
+      "To quote the film's wisest alien, who just happens to be occupying the body of an ugly-ass pug dog, 'You don't like it, you can kiss my furry little butt.'\n",
       "\n",
-      "Some of the gags don't work, but fewer than in any previous Brooks film that I've seen, and when the jokes are meant to be bad, they are riotously poor. What more can one ask of Mel Brooks?\n",
+      "A kind of insane logic seems to connect the sketches, if you look hard enough, but mostly the movie seems to exist in the present and be willing to try anything for a laugh.\n",
       "\n",
-      "It's not remotely plausible, but with Willis' McClane leaping onto the tailfins of passing jet fighters and bringing down helicopters by launching police cars at them, there's enough stuff blowing up that action fans won't mind much.\n",
+      "It isn't without some zip, though you have to wonder why the producers bothered when the censors demanded that the dancers be shown only from the neck up.\n",
       "\n",
-      "A gooey, swooning swatch of romantic hyperventilation, its queasy charms. And let it be said that surrendering to those charms could be as guilt-inducing as polishing off a pint of Haagen-Dazs chocolate ice cream before lunch.\n",
+      "This one is neither crude clowning nor crude prejudice, but a literate and knowingly directed satire which lands many a shrewd crack about phony Five Year Plans, collective farms, Communist jargon and pseudo-scientific gab.\n",
       "\n",
-      "There are occasional flashes that the film may be patronizing the lower end of the blue-collar mentality, as much if not more than the characters who keep putting Rocky down on the screen. However, Avildsen is noted for creating such ambiguities.\n",
+      "The film's low-tech styling is roughly the cardboard inversion of the cinematic machines it parodies, and Brooks seems less inclined than usual to push the overkill urges too far.\n",
       "\n"
      ]
     }
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,9 +1306,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7252088241593488\n",
+      "0.6926536731634183\n"
+     ]
+    }
+   ],
    "source": [
     "# Your turn: we build features using the tfidf features then train using a both naive bayes and a random forest \n",
     "# and compare results.\n",
@@ -1327,7 +1336,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "NB=MultinomialNB(alpha=1)\n",
-    "RF=RandomForestClassifier(n_estimators=100)\n",
+    "RF=RandomForestClassifier(n_estimators=10)\n",
     "\n",
     "NB.fit(Xtr,ytr)\n",
     "score_NB=NB.score(Xtest,ytest)\n",
@@ -1336,11 +1345,128 @@
     "score_RF=RF.score(Xtest,ytest)\n",
     "\n",
     "\n",
+    "print(score_NB)\n",
+    "print(score_RF)\n",
+    "\n",
     "                  \n",
     "\n",
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>critic</th>\n",
+       "      <th>fresh</th>\n",
+       "      <th>imdb</th>\n",
+       "      <th>publication</th>\n",
+       "      <th>quote</th>\n",
+       "      <th>review_date</th>\n",
+       "      <th>rtid</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Derek Adams</td>\n",
+       "      <td>fresh</td>\n",
+       "      <td>114709</td>\n",
+       "      <td>Time Out</td>\n",
+       "      <td>So ingenious in concept, design and execution ...</td>\n",
+       "      <td>2009-10-04</td>\n",
+       "      <td>9559</td>\n",
+       "      <td>Toy story</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Richard Corliss</td>\n",
+       "      <td>fresh</td>\n",
+       "      <td>114709</td>\n",
+       "      <td>TIME Magazine</td>\n",
+       "      <td>The year's most inventive comedy.</td>\n",
+       "      <td>2008-08-31</td>\n",
+       "      <td>9559</td>\n",
+       "      <td>Toy story</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>David Ansen</td>\n",
+       "      <td>fresh</td>\n",
+       "      <td>114709</td>\n",
+       "      <td>Newsweek</td>\n",
+       "      <td>A winning animated feature that has something ...</td>\n",
+       "      <td>2008-08-18</td>\n",
+       "      <td>9559</td>\n",
+       "      <td>Toy story</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Leonard Klady</td>\n",
+       "      <td>fresh</td>\n",
+       "      <td>114709</td>\n",
+       "      <td>Variety</td>\n",
+       "      <td>The film sports a provocative and appealing st...</td>\n",
+       "      <td>2008-06-09</td>\n",
+       "      <td>9559</td>\n",
+       "      <td>Toy story</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Jonathan Rosenbaum</td>\n",
+       "      <td>fresh</td>\n",
+       "      <td>114709</td>\n",
+       "      <td>Chicago Reader</td>\n",
+       "      <td>An entertaining computer-generated, hyperreali...</td>\n",
+       "      <td>2008-03-10</td>\n",
+       "      <td>9559</td>\n",
+       "      <td>Toy story</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               critic  fresh    imdb     publication                                              quote review_date  rtid      title\n",
+       "1         Derek Adams  fresh  114709        Time Out  So ingenious in concept, design and execution ...  2009-10-04  9559  Toy story\n",
+       "2     Richard Corliss  fresh  114709   TIME Magazine                  The year's most inventive comedy.  2008-08-31  9559  Toy story\n",
+       "3         David Ansen  fresh  114709        Newsweek  A winning animated feature that has something ...  2008-08-18  9559  Toy story\n",
+       "4       Leonard Klady  fresh  114709         Variety  The film sports a provocative and appealing st...  2008-06-09  9559  Toy story\n",
+       "5  Jonathan Rosenbaum  fresh  114709  Chicago Reader  An entertaining computer-generated, hyperreali...  2008-03-10  9559  Toy story"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "critics.head()"
    ]
   },
   {
@@ -1364,38 +1490,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=10, error_score='raise',\n",
+       "       estimator=MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True),\n",
+       "       fit_params=None, iid=True, n_jobs=1,\n",
+       "       param_grid={'alpha': [0.7, 0.8, 0.9, 1, 1.1, 1.2]},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizer=CountVectorizer(ngram_range=(1,1))\n",
+    "X=vectorizer.fit_transform(critics.quote)\n",
+    "y=critics.fresh=='fresh'\n",
+    "\n",
+    "Xtr,Xtest,ytr,ytest=train_test_split(X,y,test_size=0.3,random_state=42)\n",
+    "\n",
+    "parameters={'alpha':[0.7,0.8,0.9,1,1.1,1.2]}\n",
+    "CVSearch=GridSearchCV(MultinomialNB(),param_grid=parameters,cv=10)\n",
+    "CVSearch.fit(Xtr,ytr)\n",
+    "\n",
+    "clf=CVSearch.best_estimator_\n",
+    "print(clf.score(Xtest,ytest))\n",
+    "print(clf.score(Xtr,ytr))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7778967659027629\n",
-      "0.6862283144142215\n"
+      "0.778967659027629\n",
+      "0.9249908189496878\n"
      ]
     }
    ],
    "source": [
-    "#we try 2-grams:\n",
-    "\n",
-    "vectorizer=CountVectorizer(ngram_range=(1,2))\n",
+    "from scipy import sparse\n",
+    "vectorizer=CountVectorizer(ngram_range=(1,1))\n",
     "X=vectorizer.fit_transform(critics.quote)\n",
     "y=critics.fresh=='fresh'\n",
     "\n",
-    "Xtr,Xtest,ytr,ytest=train_test_split(X,y,test_size=0.3,random_state=42)\n",
+    "test=pd.get_dummies(critics.critic,columns='critic',sparse=True)\n",
+    "test=test.values\n",
     "\n",
-    "NB=MultinomialNB(alpha=1)\n",
-    "RF=RandomForestClassifier(n_estimators=50)\n",
+    "test2=pd.get_dummies(critics.publication,columns='publication',sparse=True)\n",
+    "test2=test2.values\n",
     "\n",
-    "NB.fit(Xtr,ytr)\n",
-    "score_NB=NB.score(Xtest,ytest)\n",
     "\n",
-    "RF.fit(Xtr,ytr)\n",
-    "score_RF=RF.score(Xtest,ytest)\n",
+    "test=sparse.csr_matrix(test)\n",
+    "test2=sparse.csr_matrix(test2)\n",
     "\n",
-    "print(score_NB)\n",
-    "print(score_RF)"
+    "Xall=sparse.hstack([X,test,test2])\n",
+    "\n",
+    "Xtr,Xtest,ytr,ytest=train_test_split(Xall,y,test_size=0.3,random_state=42)\n",
+    "\n",
+    "\n",
+    "\n",
+    "parameters={'alpha':[0.7,0.8,0.9,1,1.1,1.2]}\n",
+    "CVSearch=GridSearchCV(MultinomialNB(),param_grid=parameters,cv=10)\n",
+    "CVSearch.fit(Xtr,ytr)\n",
+    "\n",
+    "clf=CVSearch.best_estimator_\n",
+    "print(clf.score(Xtest,ytest))\n",
+    "print(clf.score(Xtr,ytr))"
    ]
   },
   {
